--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -39,6 +39,27 @@
             </ul>
             </nav>
         </div>
+        <div id="Projects">
+            <div class="P1">
+                Super Cool Project
+                
+            </div>
+            <div class="P2">
+                Less Cool Project
+            </div>
+            <div class="P3">
+                Impossible App
+            </div>
+            <div class="P4">
+                Easy Peasy App
+            </div>
+            <div class="P5">
+                Adblocker
+            </div>
+            <div class="P6">
+                <div>Money Maker
+            </div>
+        </div>
     </div>
 </body>
 </html>
