--- a/AD2.html
+++ b/AD2.html
@@ -13,24 +13,24 @@
         </div>
         <nav>
             <div>
-                Home
+                <div>Home</div>
 
-                Profile
+                <div>Profile</div>
 
-                Messages
+                <div>Messages</div>
 
-                History
+                <div>History</div>
 
-                Tasks
+                <div>Tasks</div>
 
-                Communities
+                <div>Communities</div>
             </div>
             <div>
-                Settings
+                <div>Settings</div>
 
-                Support
+                <div>Support</div>
 
-                Privacy
+                <div>Privacy</div>
             </div>
         </nav>
     </div>
@@ -60,7 +60,7 @@
     </div>
     <section class="main">
         <div>
-            <article>
+            <article id="1">
                 <div>
                     <h4>Super Cool project</h4>
                     <p>
@@ -70,7 +70,7 @@
                     </p>
                 </div>
             </article>
-            <article>
+            <article id="2">
                 <div>
                     <h4>Less cool project</h4>
                     <p> 
@@ -80,7 +80,7 @@
                     </p>
                 </div>
             </article>
-            <article>
+            <article id=3>
                 <div>
                     <h4>Impossible App</h4>
                     <p> 
@@ -90,7 +90,7 @@
                     </p>
                 </div>
             </article>
-            <article>
+            <article id="4">
                 <div>
                     <h4>Easy peasy App</h4>
                     <p>
@@ -100,7 +100,7 @@
                     </p>
                 </div>
             </article>
-            <article>
+            <article id="5"> 
                 <div>
                     <h4>Ad-Blocker</h4>
                     <p>
@@ -110,7 +110,7 @@
                     </p>
                 </div>
             </article>
-            <article>
+            <article id="6">
                 <div>
                     <h4>Money maker</h4>
                     <p>
